Search By Updated

--- a/TaskManager/src/app/admin/projects/projects.component.html
+++ b/TaskManager/src/app/admin/projects/projects.component.html
@@ -1,6 +1,41 @@
 <h1>Projects</h1>
 <div class="row">
   <div class="col-8 mx-auto">
+    <div class="form-group form-row">
+      <label for="drpSearchBy" class="col-form-label col-3"><h5>Search:</h5></label>
+      <div class="col-9">
+        <select
+          class="form-control"
+          id="drpSearchBy"
+          name="SearchBy"
+          [(ngModel)]="searchBy"
+        >
+          <option value="ProjectID">Project ID</option>
+          <option value="ProjectName">Project Name</option>
+          <option value="DateOfStart">Date of Start</option>
+          <option value="TeamSize">Team Size</option>
+        </select>
+      </div>
+    </div>
+    <div class="form-group form-row">
+      <label for="textSearchText" class="col-form-label col-3"><h5>Search:</h5></label>
+      <div class="col-9">
+        <div class="input-group">
+          <input
+            type="text"
+            class="form-control"
+            id="txtSearchText"
+            name="SearchText"
+            [(ngModel)]="searchText"
+          />
+          <div class="input-group-append" (click)="onSearchClick()">
+            <span class="input-group-text"><i class="fa fa-search"></i></span>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="col-8 mx-auto">
     <button class="btn btn-primary" data-toggle="modal" data-target="#newModal">Create Project</button>
   </div>
   <div class="col-8 mx-auto">
@@ -33,7 +68,7 @@
     <div class="modal-dialog">
       <div class="modal-content" style="width:700px">
         <div class="modal-header">
-          <div class="modal-title">New Project</div>
+          <div class="modal-title"><h4>New Project</h4></div>
           <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
         </div>
         <div class="modal-body">
@@ -86,7 +121,7 @@
     <div class="modal-dialog">
       <div class="modal-content" style="width:700px">
         <div class="modal-header">
-          <div class="modal-title">Edit Project</div>
+          <div class="modal-title"><h4>Edit Project</h4></div>
           <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
         </div>
         <div class="modal-body">
@@ -135,42 +170,43 @@
 
 
 <!-- Delete Project -->
-<form>
+
   <div class="modal" role="dialog" id="deleteModal">
+    <!-- ... (other modal content) -->
     <div class="modal-dialog">
       <div class="modal-content" style="width:700px">
         <div class="modal-header">
-          <div class="modal-title">Delete Project</div>
+          <div class="modal-title" style="color: red;"><h4>Delete Project</h4></div>
           <button type="button" class="close" data-dismiss="modal"><span>&times;</span></button>
         </div>
         <div class="modal-body">
 
           <div class="text-warning">Are you sure to delete this Project?</div>
 
-          <div class="form-group row">
-            <label for="txtDeleteProjectID" class="col-sm-4 col-form-label">Project ID</label>
-            <div class="col-sm-8">
-              <input type="text" id="txtDeleteProjectID" style="width:100px" class="form-control-plain-text" placeholder="Project ID"
-                name="ProjectID" [(ngModel)]="deleteProject.projectID" disabled="disabled">
-            </div>
-          </div>
 
-          <div class="form-group row">
-            <label for="txtDeleteProjectName" class="col-sm-4 col-form-label">Project Name</label>
-            <div class="col-sm-8">
-              <input type="text" id="txtDeleteProjectName" class="form-control-plain-text" placeholder="Project Name"
-                name="ProjectName" [(ngModel)]="deleteProject.projectName" disabled="disabled">
-            </div>
-          </div>
-
-        </div>
-        <div class="modal-footer">
-          <button class="btn btn-warning" data-dismiss="modal">Cancel</button>
-          <button class="btn btn-success" data-dismiss="modal" (click)="onDeleteConfirmClick()">Delete</button>
+    <!-- Display project details for deletion -->
+    <div class="form-group row">
+      <label for="txtDeleteProjectID" class="col-sm-4 col-form-label">Project ID</label>
+      <div class="col-sm-8">
+         <input type="text" id="txtDeleteProjectID" style="width: 100px" class="form-control-plain-text" placeholder="Project ID"
+         name="projectID" [(ngModel)]="deleteProject.projectID" disabled="disabled">
+      </div>
+   </div>
+   <div class="form-group row">
+      <label for="txtDeleteProjectName" class="col-sm-4 col-form-label">Project Name</label>
+      <div class="col-sm-8">
+         <input type="text" id="txtDeleteProjectName" class="form-control-plain-text" placeholder="Project Name"
+         name="ProjectName" [(ngModel)]="deleteProject.projectName" disabled="disabled">
+      </div>
+   </div>
+   <div class="modal-footer">
+      <button class="btn btn-warning" data-dismiss="modal">Cancel</button>
+      <button class="btn btn-success" data-dismiss="modal" (click)="onDeleteConfirmClick(deleteProject.projectID, deleteIndex)">Yes</button>
         </div>
       </div>
-    </div>
-  </div>
-</form>
+     </div>
+   </div>
+ 
+
 
 
